--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon server.js",
     "test:upload": "node tests/upload.test.js",
     "query": "node tools/run-query.js",
-    "fix-sequences": "node tools/fix-sequences.js"
+    "fix-sequences": "node tools/fix-sequences.js",
+    "test:database": "node tests/test-db-comparison.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
